fixes vue-good-table button to be invisible

--- a/src/assets/styles/scss/mixins.scss
+++ b/src/assets/styles/scss/mixins.scss
@@ -234,9 +234,17 @@
         border-bottom-width: 1.5px;
         color: rgb(96, 98, 102);
 
-        // button {
-        //   display: none;
-        // }
+        button {
+          width: 100%;
+          height: 100%;
+          padding: 0 .5rem;
+          position: absolute;
+          top: 0;
+          left: 0;
+          opacity: 0;
+          background-color: transparent;
+          cursor: pointer;
+        }
 
         div.center {
           text-align: center;
